5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1667_2969.log
== TEST (2019-04-16 16:30:18) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
soma=a(b+c)*d
print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma=a(b+c)*d
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:56) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
soma=a*(b+c)- d
print(round(soma, 2))
-- OUTPUT:
311.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:47) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
soma=((a*(b+c))- d)
print(round(soma, 2))
-- OUTPUT:
311.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:30) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
soma=((a*(b+c))/ d)
print(round(soma, 2))
-- OUTPUT:
1246.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:16) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
soma=a * (b+c)-d
print(round(soma, 2))
-- OUTPUT:
311.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:41) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
soma=a * (b+c)-d
print(round(soma, 2))
-- OUTPUT:
311.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:04) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
soma=a * (b+c)/d
print(round(soma, 2))
-- OUTPUT:
1246.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:21) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100

if(a==soma):
	soma=((a*(b + c)) - d)
print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(a==soma):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:22) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
soma=(a * b + a*c) - d
print(round(soma, 2))
-- OUTPUT:
311.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:51) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
soma=(a * b + a*c) - d
print(round(soma, 2))
-- OUTPUT:
311.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:28) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
soma=(a*b + a*c) - d
print(round(soma, 2))
-- OUTPUT:
311.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:29) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
if(a==d):
	soma=(a*b + a*c) - d
	print(round(soma, 2))
-- OUTPUT:
311.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:01) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
if(a==d):
	soma=(b + c) - d
	print(round(soma, 2))
-- OUTPUT:
311.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:56) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
if(a==d):
	soma=(a*b + a*c) - d
	print(round(soma, 2))
-- OUTPUT:
311.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:53) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
if(soma==d):
	soma=(a*b + a*c) - d
	print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(soma==d):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:27) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
if(soma):
	soma=(a*b + a*c) - d
	print(round(soma, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(soma):
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:07) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100

soma=(b + a*c) - d
print(round(soma, 2))
-- OUTPUT:
255.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:52:58) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
if(a == d):
	soma=(b + a*c) / d
	print(round(soma, 2))
-- OUTPUT:
255.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:57) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
if(b == c ):
	soma=(b + a*c) / d
	print(round(soma, 2))
-- OUTPUT:
255.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:26) 
-- CODE:
a=int(input("quantidade: "))
b=float(input("preco: "))
c=float(input("preco 2: "))
d=25/100
if(b == c ):
	soma=(b + a*c) - d
	print(round(soma, 2))
-- OUTPUT:
255.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
